Fix sidebar on mobile

--- a/src/pages/BorrowPages/BorrowManualLitePage/components/Sidebar/Sidebar.module.scss
+++ b/src/pages/BorrowPages/BorrowManualLitePage/components/Sidebar/Sidebar.module.scss
@@ -1,3 +1,9 @@
+.layout {
+  @media screen and (max-width: 960px) {
+    max-height: 550px !important; //? Не бейте меня, пожалуйста
+  }
+}
+
 .sidebar {
   overflow: auto;
   display: flex;
@@ -39,11 +45,13 @@
   @media screen and (max-width: 960px) {
     padding-left: 24px;
     padding-right: 24px;
+    margin: 0 24px 20px;
   }
 
   @media screen and (max-width: 480px) {
     padding-left: 16px;
     padding-right: 16px;
+    margin: 0 24px;
   }
 }
 
@@ -144,7 +152,6 @@
 
   @media (max-width: 960px) {
     gap: 7px;
-    height: 150px;
     overflow: auto;
   }
 }
